fixing shopping item test and raising z-index for navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,6 +9,7 @@
   border-bottom-style: solid;
   border-width: 3px;
   border-color: $light-blue;
+  z-index: 100;
 }
 
 .navbar .active {
